--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
                 <img src="#" alt="">
             </div>
             <section class="weatherInfo">
-
             </section>
+
+        </section>
+        <section class="searchField">
+            <h1>Search for a different city!</h1>
+            <input type="text">
+            <input type="submit" value="search" id="searchBtn">
         </section>
     </main>
     <script src="index.js"></script>
