loading component animation

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
             </section>
 
         </section>
-        <section class="searchField">
+        <form action="#" class="searchField">
             <h1>Search for a different city!</h1>
-            <input type="text">
-            <input type="submit" value="search" id="searchBtn">
-        </section>
+            <div class="inputWrapper">
+                <input type="text" id="searchInput">
+                <button type="submit" id="searchBtn">
+                    <span class="buttonText">Search</span>
+                </button>
+            </div>
+        </form>
     </main>
     <script src="index.js"></script>
 </body>
