--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Weather App</title>
 </head>
@@ -25,7 +28,7 @@
             <h1>Search for a different city!</h1>
             <div class="inputWrapper">
                 <input type="text" id="searchInput">
-                <button type="submit" id="searchBtn">
+                <button type="submit" id="searchBtn" class="button">
                     <span class="buttonText">Search</span>
                 </button>
             </div>
